--- a/image-hosting-system-core/src/main/resources/public/error.html
+++ b/image-hosting-system-core/src/main/resources/public/error.html
@@ -21,7 +21,7 @@
     <title>Error</title>
 </head>
 <body style="text-align: center">
-<h1>Error</h1>
+<h1>An error has occurred ;-(</h1>
 <hr>
 <p>Powered by Lingu.</p>
 </body>
